cluster/apps/default/fritz-box/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fritz-box
spec:
  type: ExternalName
  externalName: fritz.box
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
